style.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #fafafa;
    color: #fafafa;

    margin: 0;
    padding: 0;
}

header {
    background-color: #191919;
    margin: 0;
    padding: 0;
}


header h2 {
    margin: 0;
    padding: 10px;

    display: inline-block;
}

header p {
    font-size: 14px;

    margin: 0;
    padding: 10px;

    display: inline;
    float: right;
}

/* header h2 {
    background-color: #1c1c1c;
    margin: 0;
    text-align: center;
    vertical-align: middle;

    display: inline;
    line-height: 5px;
    margin-top: 0px;
    color: green;
} */

/* header img {
    display: inline;
    float: right;
} */

nav {
    position: sticky;
    overflow: hidden;

    top: 0;
    width: 100%;

    background-color: #1c1c1c;
    align-content: center;
}

nav img {
    display: inline;
}

nav ul {
    display: flex;
    float: right;

    margin: 0;
}

nav li {
    display: inline;
    padding: 16px 12px;
}

nav li:hover {
    background-color: #222222;
}

nav a {
    text-align: center;
    text-decoration: none;
    color: #fafafa;

    font-weight: bold;
}

section {
    background-color: #282828;
    padding: 1% 2%;
    margin: 5% 10%;
    border-radius: 10px;
}

